# mx-sdk-abi-incubator

golang/: clone.go  constants.go  dataReader.go  dataWriter.go  defaultCodec.go  defaultCodecForCustomTypes.go  defaultCodecForSimpleNumericalValues.go  defaultCodecForSimpleValues.go  defaultCodec_test.go  defaultDataReader.go  defaultDataWriter.go  errors.go  go.mod  interface.go  partReader.go  parts.go  reflection.go  reflection_test.go  serializer.go  serializer_test.go  shared.go  typeFormulaParser.go  typeFormulaParser_test.go  values.go
golang/abi/: constants.go  defaultCodec.go  defaultCodecForCompositeTypes.go  defaultCodecForCustomTypes.go  defaultCodecForSimpleValues.go  defaultCodec_test.go  interface.go  serializer.go  serializer_test.go  shared.go  typeFormula.go  values.go
python/: pyproject.toml
python/multiversx_sdk_abi/: __init__.py  constants.py  default_codec.py  default_data_writer.py  errors.py  serializer.py  type_formula_parser.py  type_formula_parser_test.py  values.py
testdata/: top_level_signed_numbers.txt
typescript/: package-lock.json  package.json
typescript/src/: index.ts  typeFormula.ts  typeFormulaParser.spec.ts  typeFormulaParser.ts
